<resources>
	<string name="app_name">ChatApp</string>
	<string name="hello_world">Hello world!</string>
	<string name="first">This is the first text view.</string>
	<string name="login">登录</string>
	<string name="logout">登出</string>
	<string name="login_failed">登录失败</string>
	<string name="login_success">登录成功</string>
	<string name="tab">TAB</string>
	<string name="news">信息</string>
	<string name="news_news">新消息</string>
	<string name="chat">聊天</string>
	<string name="help">邻里中心</string>
	<string name="me">我</string>
	<string name="hasnews">您有新信息</string>
	<string name="edit">编辑帖子</string>
	<string name="submit">提交</string>
	<string name="details">描述</string>
	<string name="money">赏金</string>
	<string name="address">地址</string>
	<string name="contact_person">联系人</string>
	<string name="phone">电话</string>
	<string name="please_input_details">请输入求助描述</string>
	<string name="please_input_address">请输入地址</string>
	<string name="please_input_name">请输入姓名</string>
	<string name="please_input_phone">请输入电话</string>
	<string name="accept">接下了</string>
	<string name="test">测试</string>
	<string name="register">注册</string>
	<string name="register_failed">注册失败</string>
	<string name="register_success">注册成功</string>
	<string name="please_input_username">请输入用户名</string>
	<string name="please_input_password">请输入密码</string>
	<string name="please_input_register">请完整输入注册信息</string>
	<string name="please_input_login">请完整输入登录信息</string>
	<string name="please_input_ip">请输入ip</string>
	<string name="please_input_port">请输入port</string>
	<string name="please_input_ip_and_port">请输入ip和port</string>
	<string name="set_ip_and_port">设置ip和port</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="no_user_information">无用户信息</string>
	<string name="chang_user_details_success">修改信息成功</string>
	<string name="chang_user_details_failure">修改信息失败</string>
	<string name="connect_time_out">连接超时</string>
	<string name="no_request_list">没有求助列表</string>
	<string name="no_help_list">没有数据</string>
	<string name="submit_failure">提交失败</string>
	<string name="submit_success">提交成功</string>
	<string name="finish">完成</string>
	<string name="me_age">年龄：</string>
	<string name="me_sign">签名：</string>
	<string name="me_count">助人次数：</string>
	<string name="me_address">地址：</string>
	<string name="me_phone">电话：</string>
	<string name="my_post">我的求助</string>
	<string name="my_help">我的帮助</string>
	<string name="get_post_details_success">获取信息成功</string>
	<string name="get_post_details_failure">我的信息失败</string>
	<string name="took_post_success">接帖成功</string>
	<string name="took_post_failure">接帖失败</string>
	<string name="error">出错啦</string>
	<string name="set_time">设置推送时间</string>
	<string name="set_tag">设置推送标签</string>
	<string name="show_tags">显示推送标签</string>
	<string name="feedback">反馈意见</string>
	<string name="tools">工具</string>
	<string name="please_input_title">请输入标题</string>
	<string name="please_input_feedback">请输入反馈意见</string>
	<string name="community_announcement">公告</string>
	<string name="nearby">附近</string>
	<string name="life">生活</string>
	<string name="building">建设中...</string>
</resources>
