<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	>
	<include layout="@layout/item_title" />
	<LinearLayout
		android:id="@+id/ll_help_edit_details"
		android:layout_height="wrap_content"
		android:layout_marginTop="46dp"
		android:padding="10dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		>
		<TextView
			android:gravity="center_horizontal"
			android:layout_gravity="end"
			android:layout_height="wrap_content"
			android:layout_weight="7"
			android:layout_width="match_parent"
			android:text="@string/details"
			android:textSize="22sp"
			/>
		<EditText
			android:background="@color/blue"
			android:gravity="left|top"
			android:hint="@string/please_input_details"
			android:id="@+id/et_help_details"
			android:layout_height="200dp"
			android:layout_marginLeft="10dp"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:padding="5dp"
			android:textSize="20sp"
			/>
	</LinearLayout>
	<TableLayout
		android:layout_alignParentRight="true"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_width="wrap_content"
		android:layout_below="@id/ll_help_edit_details"
		>
		<TableRow>
			<TextView
				android:gravity="center"
				android:layout_height="30dp"
				android:layout_width="80dp"
				android:text="@string/money"
				android:textSize="18sp"
				/>
			<EditText
				android:background="@color/pink"
				android:hint="0"
				android:id="@+id/et_help_money"
				android:layout_height="30dp"
				android:layout_width="150dp"
				android:paddingLeft="5dp"
				android:text=""
				/>
		</TableRow>
		<TableRow
			android:layout_marginTop="5dp"
			>
			<TextView
				android:gravity="center"
				android:layout_height="30dp"
				android:layout_width="80dp"
				android:text="@string/address"
				android:textSize="18sp"
				/>
			<EditText
				android:background="@color/pink"
				android:gravity="left|top"
				android:hint="@string/please_input_address"
				android:id="@+id/et_help_address"
				android:layout_height="50dp"
				android:layout_width="150dp"
				android:paddingLeft="5dp"
				android:text=""
				/>
		</TableRow>
		<TableRow
			android:layout_marginTop="5dp"
			>
			<TextView
				android:gravity="center"
				android:layout_height="30dp"
				android:layout_width="80dp"
				android:text="@string/contact_person"
				android:textSize="18sp"
				/>
			<EditText
				android:background="@color/pink"
				android:hint="@string/please_input_name"
				android:id="@+id/et_help_name"
				android:layout_height="30dp"
				android:layout_width="150dp"
				android:paddingLeft="5dp"
				android:text=""
				/>
		</TableRow>
		<TableRow
			android:layout_marginTop="5dp"
			>
			<TextView
				android:gravity="center"
				android:layout_height="30dp"
				android:layout_width="80dp"
				android:text="@string/phone"
				android:textSize="18sp"
				/>
			<EditText
				android:background="@color/pink"
				android:hint="@string/please_input_phone"
				android:id="@+id/et_help_phone"
				android:layout_height="30dp"
				android:layout_width="150dp"
				android:paddingLeft="5dp"
				android:text=""
				/>
		</TableRow>
	</TableLayout>
	<Button
		android:background="@color/pink"
		android:id="@+id/btn_help_submit"
		android:layout_alignParentBottom="true"
		android:layout_height="50dp"
		android:layout_width="match_parent"
		android:text="@string/submit"
		android:textSize="22sp"
		android:visibility="gone"
		/>
</RelativeLayout>