<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include layout="@layout/item_title" />

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="46dp"
		android:stretchColumns="0, 1">

		<TableRow android:layout_marginTop="20dp">
			<Button
				android:id="@+id/btn_tools_set_time"
				android:layout_width="wrap_content"
				android:layout_height="120dp"
				android:layout_margin="10dp"
				android:text="@string/set_time"
				android:background="@drawable/button_selector_tools"
				/>
			<Button
				android:id="@+id/btn_tools_set_tag"
				android:layout_width="wrap_content"
				android:layout_height="120dp"
				android:layout_margin="10dp"
				android:text="@string/set_tag"
				android:background="@drawable/button_selector_tools"
				/>
		</TableRow>

		<TableRow android:layout_marginTop="5dp">
			<Button
				android:id="@+id/btn_tools_show_tags"
				android:layout_width="wrap_content"
				android:layout_height="120dp"
				android:layout_margin="10dp"
				android:text="@string/show_tags"
				android:background="@drawable/button_selector_tools"
				/>
			<Button
				android:id="@+id/btn_tools_feedback"
				android:layout_width="wrap_content"
				android:layout_height="120dp"
				android:layout_margin="10dp"
				android:text="@string/feedback"
				android:background="@drawable/button_selector_tools"
				/>
		</TableRow>

	</TableLayout>

	<Button
		android:background="@color/pink"
		android:id="@+id/btn_logout"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/logout"
		android:textSize="22sp"
		android:layout_alignParentBottom="true"
		/>

</RelativeLayout>