<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/pink"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="${relativePackage}.${activityClass}"
	>
	<ImageView
		android:layout_gravity="center_horizontal"
		android:layout_height="120dp"
		android:layout_width="120dp"
		android:layout_marginTop="50dp"
		android:src="@mipmap/head"
		/>
	<EditText
		android:background="@color/white"
		android:hint="@string/please_input_name"
		android:id="@+id/et_login_name"
		android:layout_height="40dp"
		android:layout_width="match_parent"
		android:layout_marginLeft="50dp"
		android:layout_marginRight="50dp"
		android:layout_marginTop="50dp"
		android:paddingLeft="8dp"
		android:singleLine="true"
		android:text=""
		/>
	<EditText
		android:background="@color/white"
		android:hint="@string/please_input_password"
		android:id="@+id/et_login_password"
		android:inputType="textPassword"
		android:layout_height="40dp"
		android:layout_width="match_parent"
		android:layout_marginLeft="50dp"
		android:layout_marginRight="50dp"
		android:layout_marginTop="30dp"
		android:paddingLeft="8dp"
		android:singleLine="true"
		android:text=""
		/>
	<Button
		android:id="@+id/btn_login"
		android:layout_gravity="center_horizontal"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
	    android:text="@string/login"
		/>
	<TextView
		android:id="@+id/tv_register"
		android:layout_gravity="right"
		android:layout_height="wrap_content"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
		android:text="@string/register"
		android:textSize="18sp"
		/>
	<TextView
		android:id="@+id/tv_set_ip_and_port"
		android:layout_gravity="right"
		android:layout_height="wrap_content"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
		android:text="@string/set_ip_and_port"
		android:textSize="18sp"
		/>
</LinearLayout>
