<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/pink"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	>
	<include layout="@layout/item_title"/>
	<EditText
		android:background="@color/white"
		android:id="@+id/et_register_name"
		android:layout_height="40dp"
		android:hint="@string/please_input_username"
		android:layout_marginLeft="50dp"
		android:layout_marginRight="50dp"
		android:layout_marginTop="80dp"
		android:layout_width="match_parent"
		android:paddingLeft="8dp"
		android:singleLine="true"
		/>
	<EditText
		android:background="@color/white"
		android:id="@+id/et_register_password"
		android:layout_height="40dp"
		android:hint="@string/please_input_password"
		android:layout_marginLeft="50dp"
		android:layout_marginRight="50dp"
		android:layout_marginTop="30dp"
		android:layout_width="match_parent"
		android:paddingLeft="8dp"
		android:singleLine="true"
		/>
	<Button
		android:id="@+id/btn_register"
		android:layout_gravity="center_horizontal"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/register"
		/>
</LinearLayout>