<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		>
		<FrameLayout
			android:id="@+id/tab_content"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1.0"
			/>
		<RadioGroup
			android:id="@+id/tabs_rg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
		    android:background="@color/rg_tabs"
			>
			<RadioButton
				android:id="@+id/tab_rb_chat"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/chat"
				android:textSize="13sp"
				android:layout_weight="1.0"
				android:gravity="center"
				android:singleLine="true"
				android:checked="true"
				android:drawableTop="@mipmap/chat"
				android:button="@null"
				android:textColor="#000000"
				android:background="@drawable/selector_tab"
			    android:paddingTop="7dp"
				/>
			<RadioButton
				android:id="@+id/tab_rb_help"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/help"
				android:textSize="13sp"
				android:layout_weight="1.0"
				android:gravity="center"
				android:singleLine="true"
				android:drawableTop="@mipmap/help"
				android:button="@null"
				android:textColor="#000000"
				android:background="@drawable/selector_tab"
				android:paddingTop="7dp"
				/>
			<RadioButton
				android:id="@+id/tab_rb_me"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/me"
				android:textSize="13sp"
				android:layout_weight="1.0"
				android:gravity="center"
				android:singleLine="true"
				android:drawableTop="@mipmap/me"
				android:button="@null"
				android:textColor="#000000"
				android:background="@drawable/selector_tab"
				android:paddingTop="7dp"
				/>
		</RadioGroup>
	</LinearLayout>
</LinearLayout>

