<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<include layout="@layout/item_title" />
	<ImageView
		android:id="@+id/iv_me_head"
		android:layout_gravity="center_horizontal"
		android:layout_height="70dp"
		android:layout_marginTop="86dp"
		android:layout_marginLeft="20dp"
		android:layout_width="70dp"
		android:src="@mipmap/head"
		/>
	<EditText
		android:background="@color/blue"
		android:gravity="center_vertical"
		android:id="@+id/et_me_name"
		android:layout_height="30dp"
		android:layout_marginTop="80dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/iv_me_head"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<TextView
		android:id="@+id/tv_me_age"
		android:background="@color/blue"
		android:gravity="center_vertical"
		android:layout_below="@id/et_me_name"
		android:layout_height="30dp"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="30dp"
		android:layout_toRightOf="@id/iv_me_head"
		android:layout_width="wrap_content"
		android:padding="5dp"
		android:text="@string/me_age"
		android:textSize="16sp"
		/>
	<EditText
		android:background="@color/blue"
		android:gravity="center_vertical"
		android:id="@+id/et_me_age"
		android:layout_below="@id/et_me_name"
		android:layout_height="30dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/tv_me_age"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text=""
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<TextView
		android:id="@+id/tv_me_sign"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:background="@color/blue"
		android:gravity="center_vertical"
		android:layout_below="@id/et_me_age"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="30dp"
		android:layout_toRightOf="@id/iv_me_head"
		android:padding="5dp"
		android:text="@string/me_sign"
		android:textSize="16sp"
		/>
	<EditText
		android:background="@color/blue"
		android:gravity="center_vertical"
		android:id="@+id/et_me_sign"
		android:layout_below="@id/et_me_age"
		android:layout_height="30dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/tv_me_sign"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text=""
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<TextView
		android:id="@+id/tv_me_helpcount"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:layout_below="@id/et_me_sign"
		android:layout_marginTop="40dp"
		android:layout_marginLeft="30dp"
		android:padding="5dp"
		android:text="@string/me_count"
		android:textSize="16sp"
		/>
	<EditText
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:id="@+id/et_me_helpcount"
		android:layout_below="@id/et_me_sign"
		android:layout_height="30dp"
		android:layout_marginTop="40dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/tv_me_helpcount"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text=""
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<TextView
		android:id="@+id/tv_me_address"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:layout_below="@id/et_me_helpcount"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="30dp"
		android:padding="5dp"
		android:text="@string/me_address"
		android:textSize="16sp"
		/>
	<EditText
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:id="@+id/et_me_address"
		android:layout_below="@id/et_me_helpcount"
		android:layout_height="30dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/tv_me_address"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text=""
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<TextView
		android:id="@+id/tv_me_phone"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:layout_below="@id/et_me_address"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="30dp"
		android:padding="5dp"
		android:text="@string/me_phone"
		android:textSize="16sp"
		/>
	<EditText
		android:background="@color/pink"
		android:gravity="center_vertical"
		android:id="@+id/et_me_phone"
		android:layout_below="@id/et_me_address"
		android:layout_height="30dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="30dp"
		android:layout_toRightOf="@id/tv_me_phone"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text=""
		android:textSize="16sp"
		android:enabled="false"
		android:inputType="text"
		/>
	<Button
		android:id="@+id/btn_me_finish"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@id/et_me_phone"
		android:text="@string/finish"
		android:textSize="16sp"
		android:gravity="center"
		android:background="@color/blue"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:visibility="gone"
		/>
</RelativeLayout>